src/test/deca/context/invalid/aatest.deca
// Description:
//     Operation arithmetique modulo avec des mauvais types.
//
// Resultats:
//    Ligne 12: Arithmetic modulo operation type mismatch
//
// Historique:
//    cree le 01/01/2023

class A{
    protected int y;
    int getX(int x){
        int x = 25;
        print(x);
    }
}

